apps/aws-load-balancer-controller/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlsecops-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/actions.argocd-rewrite: |
      {"type":"redirect","redirectConfig":{"path":"/argocd/","statusCode":"HTTP_301"}}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80

          - path: /workflows
            pathType: Prefix
            backend:
              service:
                name: argo-workflows-server
                port:
                  number: 2746

          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
